fix(java): use stable FFM string helpers