@@ -960,7 +960,7 @@ public final class KreuzbergFFI {
         if (address == null || address.address() == 0) {
             return null;
         }
-        return address.reinterpret(C_STRING_MAX_SIZE).getUtf8String(0);
+        return address.reinterpret(C_STRING_MAX_SIZE).getString(0);
     }
 
     /**
@@ -971,7 +971,7 @@ public final class KreuzbergFFI {
      * @return a MemorySegment containing the C string
      */
     public static MemorySegment allocateCString(Arena arena, String str) {
-        return arena.allocateUtf8String(str);
+        return arena.allocateFrom(str);
     }
 
     /**
